Bug 1762994: fix inconsistency in nsWindowsShellService folder ID handling r=mhowell

The shortcut creation code was mapping the "StartMenu" known folder to what is actually a "Programs" folder. This patch fixes that, and updates some related code to match. Notably, no behaviour has changed (ie: we still create shortcuts in the same place) -- this just makes it more obvious what's happening.

Differential Revision: https://phabricator.services.mozilla.com/D147701